# wstan

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  setup.py
doc/: protocol.md
extra/: asynctfo_setup.py  winasynctfo_setup.py
extra/asynctfo/: __init__.py  linux.py  overlapped.cpp  overlapped.vcxproj  win.py
extra/winasynctfo/: WinAsyncTfo.vcxproj  __init__.py
wstan/: __init__.py  client.py  logview.html  relay.py  server.py  utils.py
wstan/autobahn/: __init__.py  util.py
wstan/autobahn/asyncio/: __init__.py  websocket.py
wstan/autobahn/websocket/: __init__.py  compress.py  compress_deflate.py  protocol.py  types.py  utf8validator.py  xormasker.py
