[build-system]
requires = ["setuptools", "wheel", "cryptography"]
build-backend = "setuptools.build_meta"

[project]
name = "wstan"
version = "0.5.0"
description = "Tunneling TCP/UDP in WebSocket"
readme = "README.md"
authors = [
    { name = "krrr", email = "guogaishiwo@gmail.com" }
]
dependencies = ["cryptography"]
requires-python = ">=3.5"
keywords = ["proxy", "tunnel", "websocket"]
classifiers = [
    "Topic :: Internet :: Proxy Servers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only"
]
urls = { homepage = "https://github.com/krrr/wstan" }

[project.optional-dependencies]
advanced_web_log_viewer = ["jinja2"]

[project.scripts]
wstan = "wstan:main_entry"
